[project]
name = "mumbai-traffic-police"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "spacy>=3.8.14",
    "streamlit>=1.58.0",
    "textblob>=0.20.0",
]
